--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -763,7 +763,7 @@
 </details>
 
             <h2 id="h-4">How to fill out</h2>
-          <p>  You can filter by key words to find information <strong>specific to your <a href="#special" aria-controls="centred-popup" class="wb-lbx" role="button">special situation&nbsp;<span class="far fa-question-circle"></span></a></strong> .</p> 
+          <p>  You can filter by key words to find information specific to your <a href="#special" aria-controls="centred-popup" class="wb-lbx" role="button">special situation&nbsp;<span class="far fa-question-circle"></span></a>.</p> 
 
          
    <div class="btn-group mrgn-tp-md">
