--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1037,7 +1037,7 @@
 </li>
 		<li class="code-num">
 
-<details><summary id="bx_16">Boxes 16 – Employee's CPP contributions</summary>
+<details><summary id="bx_16">Box 16 – Employee's CPP contributions</summary>
 	 <p>Report the amount of CPP contributions you deducted from your employee in box 16 if box 10 shows their province or territory of employment is other than Quebec.</p>
 	<p><strong>Do not </strong>report any amount in box 16 if your employee did not contribute to the plan.</p>
 	                  
@@ -1073,7 +1073,7 @@
             </details>
 </li>
 		<li class="code-num">
-<details><summary id="bx_16a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Boxes 16A – Employee's second CPP (CPP2) contributions</summary>	
+<details><summary id="bx_16a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 16A – Employee's second CPP (CPP2) contributions</summary>	
 <p>For T4 slips filed for calendar year 2024 and after, report the amount of CPP2 contributions you deducted from your employee in box 16A if box 10 shows their province or territory of employment is other than Quebec.</p>
 <p>The CRA will provide more instructions by the end of 2023. </p>
 </details>	    	    
@@ -1110,7 +1110,7 @@
             </details>  
     </li>
 		<li class="code-num">         
- <details><summary id="bx_17a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Boxes 17A – Employee's second QPP (QPP2) contributions</summary>
+ <details><summary id="bx_17a"><span class="label label-warning">Slips filed for calendar year 2024 and after</span> Box 17A – Employee's second QPP (QPP2) contributions</summary>
 <p>For T4 slips filed for calendar year 2024 and after, report the amount of QPP2 contributions you deducted from your employee in box 17A if box 10 shows their province of employment is Quebec.</p>
 <p>The CRA will provide more instructions by the end of 2023.</p>	
 </details>           
