--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -770,13 +770,14 @@
 			<ul class="wb-filter list-unstyled" data-wb-filter='{
 		"selector": ".code-num"
 	}'>
- <div class="btn-group mrgn-tp-md">
-            <button class="btn btn-default wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
+ <div class="btn-group mrgn-tp-md mrgn-bttm-md">
+            <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;on&quot;}" type="button">Expand all</button>
-            <button class="btn btn-default wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
+            <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
             </div>
-      <li class="code-num">
+   
+   <li class="code-num">
 	<details>
             <summary id="yr">Year</summary>
             <p>Enter the 4 digits of the calendar year in which you made the payment to the employee.</p>
