--- a/fhsa/v2/index.html
+++ b/fhsa/v2/index.html
@@ -67,38 +67,38 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Participating in your FHSAs</a></h3>
+          <h3><a href="participating.html">Participating in your FHSAs</a></h3>
           <p>How much you can contribute or transfer to your FHSAs, and how much unused FHSA participation room you can carry forward</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll.html">Transfers between FHSAs and other registered plans</a></h3>
+          <h3><a href="transfers.html">Transfers between FHSAs and other registered plans</a></h3>
           <p>How much can be transferred directly to and from your FHSAs</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/services/taxes/business-number.html">Withdrawals from your FHSAs</a></h3>
+          <h3><a href="withdrawals.html">Withdrawals from your FHSAs</a></h3>
           <p>Withdrawals from your FHSAs to buy a qualifying home or for other reasons, and possible tax consequences</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/services/taxes/savings-and-pension-plans.html">Tax deductions for FHSA contributions</a></h3>
+          <h3><a href="deductions.html">Tax deductions for FHSA contributions</a></h3>
           <p>How much of your FHSA contributions you can deduct on your income tax and benefit return, and how much of your unused FHSA contributions you can deduct in future years</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/services/taxes/child-and-family-benefits.html">What happens if you contribute or transfer too much to your FHSAs</a></h3>
+          <h3><a href="toomuch.html">What happens if you contribute or transfer too much to your FHSAs</a></h3>
           <p>Taxes you may need to pay and how to reduce or eliminate your excess FHSA amount</p>
         </section>
       </div>
      
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/make-a-service-complaint.html">Death and FHSAs</a></h3>
+          <h3><a href="death.html">Death and FHSAs</a></h3>
           <p>What happens to an FHSA when the FHSA holder dies, including tax implications for the deceased holder, survivor, and other FHSA beneficiaries</p>
         </section>	    
 	    </div>
@@ -106,7 +106,7 @@
 	      
 	  <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/make-a-service-complaint.html">Definitions for FHSAs</a></h3>
+          <h3><a href="">Definitions for FHSAs</a></h3>
         </section>	    
 	    </div>
    </section> 
