--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -828,6 +828,20 @@
             <p>Leave box 28 blank if you reported an amount in box 55 or 56. </p>
             <p>Enter an "X" or a check mark in the "PPIP" box only if you did not have to withhold PPIP premiums from the earnings for the <strong>entire </strong>period of employment <strong>in the province of Quebec</strong>. </p>
             <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
+
+ <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dd></dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+</dl>   
+
             </details>
 </li>
 		<li class="code-num">
@@ -1385,6 +1399,19 @@
             <li>A foreign pension plan </li>
             </ul>
             <p>For more information about the PA for these types of plans or arrangements, see Guide T4084, Pension Adjustment Guide, or call our Registered Plans Directorate at <strong>1-800-267-3100 </strong>in Canada and the United States or, if you are calling from outside of Canada or the United States, call us collect at <strong>613-221-3105</strong>.</p>
+
+ <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dd></dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+
+<dt>Add title</dt>
+<dd>Add situation</dd>
+</dl>   
             </details>
 </li>
 		<li class="code-num">
