--- a/fhsa/death.html
+++ b/fhsa/death.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Opening and closing your FHSAs - First Home Savings Account (FHSA) - Canada.ca</title>
+         <title>Death and FHSAs - First Home Savings Account (FHSA) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -58,20 +58,27 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
           
-            <h1 property="name" id="wb-cont" class="gc-thickline">Opening and closing your FHSAs</h1>
-            <p>Find out who is eligible to open a first home savings account (FHSA), how to open an account, and when to close your accounts.</p>
-		 <div class="alert alert-success">
-	<p>You can open an FHSA starting April 1, 2023.</p>
-</div>
-
+            <h1 property="name" id="wb-cont" class="gc-thickline">Death and FHSAs</h1>
+        <p>Learn about the steps that you may need to take after a&nbsp;<a href="#holder" aria-controls="holder" class="wb-lbx" role="button">holder&nbsp;<span class="far fa-question-circle"></span></a> of a first home savings account (FHSA) dies.</p>
 	
-
-</div>
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">Who can open an FHSA</a></li>
-               <li><a href="#h-2">How to open an FHSA</a></li>
-               <li><a href="#h-3">When to close an FHSA</a></li>
+               <li><a href="#h-1">Deceased holder</a></li>
+               <li><a href="#h-2">Types of beneficiaries</a></li>
+               <li><a href="#h-3">Survivors</a></li>
+		    <ul>
+			    <li><a href="#h-4>Designated as successor holder and a qualifying individual</a></li>
+								    <li><a href="#h-5>Designated as successor holder and not a qualifying individual</a></li>
+			    			    <li><a href="#h-6>Designated as a beneficiary (not the successor holder)</a></li>
+											    <li><a href="#h-7>Survivors when there are no designated beneficiaries</a></li>
+		    </ul>
+		    											    <li><a href="#h-8>Beneficiaries other than survivors</a></li>
+																										    <li><a href="#h-9>Closing the FHSAs after death</a></li>
+
+
+
+
+
             </ul>
             <h2 id="h-1">Who can open an FHSA</h2>
             <p>To open an FHSA, you must be a qualifying individual.</p>
