--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -835,7 +835,7 @@
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
-<dt>Add title</dt>
+<dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
 <dd>Add situation</dd>
 
 <dt>Add title</dt>
@@ -971,13 +971,13 @@
             <summary id="bx_29">Box 29&nbsp;– Employment code</summary>
             <p>Enter the appropriate employment code in box 29 if one of the following situations applies. Otherwise, leave it blank.</p>
             <ul>
-            <li>11 &ndash; <a href="#agency1" aria-controls="centred-popup" class="wb-lbx" role="button">Placement or employment agency workers&nbsp;<span class="far fa-question-circle"></span></a></li>
-            <li>12 &ndash; <a href="#self1" aria-controls="centred-popup" class="wb-lbx" role="button">Taxi drivers or drivers of other passenger-carrying vehicles&nbsp;<span class="far fa-question-circle"></span></a></li>
-            <li>13 &ndash; <a href="#self1" aria-controls="centred-popup" class="wb-lbx" role="button">Barbers or hairdressers&nbsp;<span class="far fa-question-circle"></span></a></li>
-            <li>14 &ndash; <a href="#defer1" aria-controls="centred-popup" class="wb-lbx" role="button">Withdrawal from a prescribed salary deferral arrangement plan&nbsp;<span class="far fa-question-circle"></span></a></li>
-            <li>15 &ndash; <a href="#agri1" aria-controls="centred-popup" class="wb-lbx" role="button">Seasonal Agricultural Workers Program&nbsp;<span class="far fa-question-circle"></span></a></li>
-            <li>16 &ndash; <a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">Detached employee &ndash; Social security agreement&nbsp;<span class="far fa-question-circle"></span></a></li>
-            <li>17 &ndash; <a href="#fish1" aria-controls="centred-popup" class="wb-lbx" role="button">Self-employed fishing income&nbsp;<span class="far fa-question-circle"></span></a></li>
+            <li>11 - Placement or employment agency worker</li>
+            <li>12 - Taxi drivers or drivers of other passenger-carrying vehicles</li>
+            <li>13 - Barbers or hairdressers</li>
+            <li>14 - Withdrawal from a prescribed salary deferral arrangement plan</li>
+            <li>15 - Seasonal Agricultural Workers Program</li>
+            <li>16 - Detached employee &ndash; Social security agreement</li>
+            <li>17 - Self-employed fishing income</li>
             </ul>
             </details>
 		 </li>
@@ -1033,7 +1033,7 @@
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
-<dt>Add title</dt>
+<dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
 <dd>Add situation</dd>
 
 <dt>Add title</dt>
@@ -1157,7 +1157,7 @@
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
-<dt>Add title</dt>
+<dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
 <dd>Add situation</dd>
 
 <dt>Add title</dt>
@@ -1269,7 +1269,7 @@
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
-<dt>Add title</dt>
+<dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
 <dd>Add situation</dd>
 
 <dt>Add title</dt>
@@ -1432,7 +1432,7 @@
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
-<dt>Add title</dt>
+<dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
 <dd>Add situation</dd>
 
 <dt>Add title</dt>
@@ -1457,7 +1457,7 @@
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd></dd>
 
-<dt>Add title</dt>
+<dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
 <dd>Add situation</dd>
 
 <dt>Add title</dt>
