--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1017,17 +1017,9 @@
             <h3>Employment codes in box 29</h3>
             <p><strong>Do not </strong>report an amount in box 14 if you are using employment code 11, 12, 13, or 17 in box 29.</p>
             <p><strong>Do not </strong>report an amount in box 14 if you, as the employer, are paying CPP on behalf of detached employees under employment code 16 and no other type of income is reported in box 29.</p>
-            <h3>Special situations</h3>
-            <ul>
-            <li><a href="#retire1" aria-controls="centred-popup" class="wb-lbx" role="button">Retiring allowances&nbsp;<span class="far fa-question-circle"></span></a></li>
-	    <li><a href="#forces1" aria-controls="centred-popup" class="wb-lbx" role="button">Canadian Forces personnel and police officers &nbsp;<span class="far fa-question-circle"></span></a> </li>
-            <li><a href="#emergency1" aria-controls="centred-popup" class="wb-lbx" role="button">Emergency volunteers &nbsp;<span class="far fa-question-circle"></span></a>  </li>
-            <li><a href="#trims1" aria-controls="centred-popup" class="wb-lbx" role="button">Employees with power saws or tree trimmers &nbsp;<span class="far fa-question-circle"></span></a> </li>
-            <li><a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">Employees outside Canada &nbsp;<span class="far fa-question-circle"></span></a> </li>
-            <li><a href="#overpaid1" aria-controls="centred-popup" class="wb-lbx" role="button">Employee salary overpayments &nbsp;<span class="far fa-question-circle"></span></a> </li>
-            </ul>
+           
 
-  <h4>Specific situation</h4>
+  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
@@ -1036,8 +1028,24 @@
 <dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
 <dd>Add situation</dd>
 
-<dt>Add title</dt>
+<dt>Retiring allowances</dt>
 <dd>Add situation</dd>
+
+<dt>Canadian Forces personnel and police officers</dt>
+<dd>Add situation</dd>
+
+<dt>Emergency volunteers</dt>
+<dd>Add situation</dd>
+
+<dt>Employees with power saws or tree trimmers  </dt>
+<dd>Add situation</dd>
+
+<dt>Employees outside Canada</dt>
+<dd>Add situation</dd>
+
+<dt>Employee salary overpayments</dt>
+<dd>Add situation</dd>
+
 </dl>   
             </details>
 </li>
@@ -1072,7 +1080,7 @@
             <li>The recovered amount does not affect the current year-to-date CPP contributions </li>
             </ul>
          
-       <h4>Specific situation</h4>
+       <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
