--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1032,7 +1032,7 @@
 <dd>Add situation</dd>
 
 <dt>Canadian Forces personnel and police officers</dt>
-<dd>Add situation</dd>
+<dd>Report the employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code box 14 <strong>and</strong> <a href="#cd_43">code 43</a>.</p></dd>
 
 <dt>Emergency volunteers</dt>
 <dd>Add situation</dd>
@@ -1578,8 +1578,11 @@
 			<li class="code-num">
             <details>
             <summary id="cd_43">Code 43&nbsp;– Canadian Armed Forces personnel and police deduction</summary> 
-            <p>For 2017 and subsequent taxation years, Canadian Armed Forces personnel and police officers deployed outside Canada can claim a deduction from net income for the amount of employment earnings <strong>they receive while serving on international operational missions </strong>as determined by the Minister of National Defence or by a person designated by that Minister. This is the case regardless of the risk associated with the mission. Enter code 43 and the amount of those earnings, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces. </p>
-            <p>Also report this amount with the total employment earnings in box 14.</p>
+           
+<p>Report the employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code 043 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+
+ <p>For 2017 and subsequent taxation years, Canadian Armed Forces personnel and police officers deployed outside Canada can claim a deduction from net income for the amount of employment earnings <strong>they receive while serving on international operational missions </strong>as determined by the Minister of National Defence or by a person designated by that Minister. This is the case regardless of the risk associated with the mission. </p>
+<p>Learn more: <a href="">Where could I redirect Jeremiah?</a></p> 
             </details> 
 			</li>
 			<li class="code-num">
