--- a/fhsa/v3/participate.html
+++ b/fhsa/v3/participate.html
@@ -224,7 +224,7 @@
 
                 </details>
     
- <h2 id="h-5">Your spouse's or common-law partner's FHSAs</h2>
+ <h3">Your spouse's or common-law partner's FHSAs</h3>
 	<p>You are not permitted to participate directly in your spouse’s or common-law partner’s FHSA.&nbsp;Your <a href="#spouse" aria-controls="spouse" class="wb-lbx" role="button">spouse&nbsp;<span class="far fa-question-circle"></span></a> or <a href="#comlaw" aria-controls="comlaw" class="wb-lbx" role="button">common-law partner&nbsp;<span class="far fa-question-circle"></span></a> is the only person who can participate in their own FHSA.</p>
 <p>Only the <a href="#holder" aria-controls="holder" class="wb-lbx" role="button">holder&nbsp;<span class="far fa-question-circle"></span></a> of the FHSA can claim the FHSA contributions as a tax deduction on their income tax and benefit return.</p>
 	<p></p>For more information about tax deductions for your FHSA contributions, go to&nbsp;<a href="/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/tax-deductions-fhsa-contributions.html">Tax deductions for FHSA contributions</a>.</p>
