--- a/fhsa/v3/participate.html
+++ b/fhsa/v3/participate.html
@@ -463,7 +463,7 @@
 
 
 </div>
- <h2 id="h-6">Transfers from a spousal or common-law partner RRSP</h2>
+ <h3>Transfers from a spousal or common-law partner RRSP</h3>
 	<p>Generally, you can transfer property from your spousal or common-law partner RRSPs to your FHSAs. However, you are not permitted to make a transfer from your spousal or common-law partner RRSP to your FHSAs if your <a href="#spouse" aria-controls="spouse" class="wb-lbx" role="button">spouse&nbsp;<span class="far fa-question-circle"></span></a> or <a href="#comlaw" aria-controls="comlaw" class="wb-lbx" role="button">common-law partner&nbsp;<span class="far fa-question-circle"></span></a> contributed any amounts to any spousal or common-law partner RRSP in the same year as the transfer or in the two previous calendar years. If no contributions were made by your spouse or common-law partner during this period, the normal RRSP to FHSA transfer rules apply.</p>
 <p>The transfer of property from your spousal or common-law partner RRSPs to your FHSAs will not restore your or your spouse's or common-law partner’s unused RRSP deduction room.</p>
 <p>To complete a <strong>direct</strong> transfer from your spousal or common-law partner RRSPs to your FHSAs, fill out <span class="nowrap">Form&nbsp;<a href="/en/revenue-agency/services/forms-publications/forms/rc720.html">RC720, Transfer</a></span><a href="/en/revenue-agency/services/forms-publications/forms/rc720.html"> from your RRSP to your FHSA</a> and give it to your financial institution.</p>
