--- a/fhsa/v3/out.html
+++ b/fhsa/v3/out.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Withdrawals from your FHSAs - First Home Savings Account (FHSA) - Canada.ca</title>
+         <title>Withdrawals and transfers out of your FHSAs - First Home Savings Account (FHSA) - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -163,8 +163,8 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
           
-            <h1 property="name" id="wb-cont" class="gc-thickline">Withdrawals from your FHSAs</h1>
-                    <p>You may need or want to take <a href="#propfhsa" aria-controls="propfhsa" class="wb-lbx" role="button">property&nbsp;<span class="far fa-question-circle"></span></a> out of your first home savings account (FHSA) to buy your first house, or for another purpose. The reason you withdraw property from your FHSA changes how your withdrawal is treated for income tax purposes.</p>
+            <h1 property="name" id="wb-cont" class="gc-thickline">Withdrawals and transfers out of your FHSAs</h1>
+                    <p>You may want to take <a href="#propfhsa" aria-controls="propfhsa" class="wb-lbx" role="button">property&nbsp;<span class="far fa-question-circle"></span></a> out of your first home savings account (FHSA) to buy your first house, or for another purpose. You may want to transfer property from your FHSA to another registered account. Depending on the circumstances, you may or may not need to pay taxes on your withdrawals or transfers.</p>
 
 
 	
@@ -172,10 +172,13 @@
 
             <h2 class="h3">On this page</h2>
             <ul>
-               <li><a href="#h-1">Types of withdrawals</a></li>
-               <li><a href="#h-2">Making qualifying withdrawals from your FHSAs</a></li>
-               <li><a href="#h-3">Making taxable withdrawals from your FHSAs</a></li>
-		                   <li><a href="#h-4">Making designated withdrawals from your FHSAs</a></li>
+               <li><a href="#h-1">Making qualifying withdrawals from your FHSAs</a></li>
+               <li><a href="#h-2">Making taxable withdrawals from your FHSAs</a></li>
+		                   <li><a href="#h-3">Making designated withdrawals or transfers from your FHSAs</a></li>
+		    		                   <li><a href="#h-4">Transfers from your FHSAs to your RRSPs or RRIFs</a></li>
+		    		                   <li><a href="#h-5">Transferring amounts on the breakdown of a marriage or common-law partnership</a></li>
+
+
 
             </ul>
             <h2 id="h-1">Types of withdrawals</h2>
