--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -782,7 +782,7 @@ margin-left: 38px;
             <h2 id="gc-navseq-header" class="mrgn-tp-0 hidden-xs hidden-sm">Sections</h2>
             <ul class="gc-navseq">
                 <li class="active"><a aria-current="page"><a href="whomust.html">Who must file a return and pay the tax</span></a></li>
-                <li><a href="duedate.html">Filing and payment due date</span></a></li>
+                <li><a href="duedate.html">When to send the return and pay the tax</span></a></li>
 	<li><a href="complete-return.html">Complete the return</span></a></li>
                 <li><a href="sendreturn.html">Send the return</span></a></li>
                 <li><a href="paytax.html">Pay the tax</span></a></li>
@@ -811,8 +811,8 @@ margin-left: 38px;
 			 <summary>What is a residential property</summary>
 			 <p>Generally, residential property is defined as property that is either of the following:</p>
 <ul>
-	<li>A detached house or similar building that contains a maximum of 3 dwelling units, included the related land</li>
-	<li>A semi-detached house, rowhouse unit, or condominium, included the related land</li>
+	<li>A detached house or similar building that contains a maximum of 3 dwelling units, including the related land</li>
+	<li>A semi-detached house, rowhouse unit, or condominium, including the related land</li>
 	</ul>
 	<p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681148">Residential property</a></p>
 			 
