--- a/fhsa/v3/index.html
+++ b/fhsa/v3/index.html
@@ -61,8 +61,8 @@
     <div class="wb-eqht row">
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="open.html">Opening and closing your FHSAs</a></h3>
-          <p>Who is eligible to open an FHSA and when to close your account</p>
+          <h3><a href="open.html">Opening your FHSAs</a></h3>
+          <p>Who is eligible to open an FHSA</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
@@ -94,11 +94,16 @@
       <div class="col-lg-4 col-md-6">
         <section>
           <h3><a href="death.html">Death and FHSAs</a></h3>
-          <p>What happens to an FHSA when the FHSA holder dies, including tax implications for the deceased holder, survivor, and other FHSA beneficiaries</p>
+          <p>Detail about closing your FHSA</p>
         </section>	    
 	    </div>
    
-	      
+	      <div class="col-lg-4 col-md-6">
+        <section>
+          <h3><a href="death.html">Death and FHSAs</a></h3>
+          <p>What happens to an FHSA when the FHSA holder dies, including tax implications for the deceased holder, survivor, and other FHSA beneficiaries</p>
+        </section>	    
+	    </div>
 	  <div class="col-lg-4 col-md-6">
         <section>
           <h3><a href="">Definitions for FHSAs</a></h3>
