--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -1029,7 +1029,7 @@ margin-left: 38px;
    </details>
 
           <details id="full-text">
-            <summary>Read long form text</summary>
+            <summary>Read text version</summary>
      
 			  <h3 id="h_1_2">Ownership types and examples</h3>
 			  <p>You may be considered one of two types of owners.</p>
