--- a/fhsa/v3/index.html
+++ b/fhsa/v3/index.html
@@ -93,8 +93,8 @@
      
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="death.html">Death and FHSAs</a></h3>
-          <p>Detail about closing your FHSA</p>
+          <h3><a href="death.html">Closing your FHSAs</a></h3>
+          <p>Details about your maximum participation period and when to close your FHSA</p>
         </section>	    
 	    </div>
    
