--- a/fhsa/death.html
+++ b/fhsa/death.html
@@ -81,10 +81,10 @@
 
             </ul>
 
-  <h2><a id="h_1"></a>Deceased holder</h2>
+  <h2><a id="h_1"></a>Deceased holderr</h2>
 
     
-
+<div class="mwsbodytext text parbase section">
 
     
 
