--- a/fhsa/v3/index.html
+++ b/fhsa/v3/index.html
@@ -62,13 +62,13 @@
       <div class="col-lg-4 col-md-6">
         <section>
           <h3><a href="open.html">Opening your FHSAs</a></h3>
-          <p>Who is eligible to open an FHSA</p>
+          <p>Review eligibility criteria and find out how you can open an FHSA</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
           <h3><a href="participating.html">Participating in your FHSAs</a></h3>
-          <p>How much you can contribute or transfer to your FHSAs, and how much unused FHSA participation room you can carry forward</p>
+          <p>How much you can contribute or transfer to your FHSAs, and calculating your FHSA participation room</p>
         </section>
       </div>
      
