--- a/fhsa/v3/index.html
+++ b/fhsa/v3/index.html
@@ -81,7 +81,7 @@
       <div class="col-lg-4 col-md-6">
         <section>
           <h3><a href="deductions.html">Tax deductions for FHSA contributions</a></h3>
-          <p>How much of your FHSA contributions you can deduct on your income tax and benefit return, and how much of your unused FHSA contributions you can deduct in future years</p>
+          <p>Deducting used and unused FHSA contributions from your income tax and benefit return</p>
         </section>
       </div>
       <div class="col-lg-4 col-md-6">
