--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -834,11 +834,9 @@ margin-left: 38px;
 		 <br>
 				<p>If you are an <strong>affected owner</strong>, you must file an annual Underused Housing Tax return for each of your residential properties. </p>
 		 
-		 <p>In most situations, affected owners of residential properties on December 31, must pay the Underused Housing Tax for each residential property they own. However, if your ownership of the property qualifies for an exemption, you will not have to pay the tax for the calendar year.</p>
-		 <p>Even if your ownership of a residential property qualifies for an exemption from paying the tax for the calendar year, you must still file an annual return for the property, and indicate the applicable exemption in your return.</p>
-		 <p>If you are not an affected owner, we refer to you as an <strong>excluded owner</strong>. Only excluded owners do not have to file a return or pay the tax. </p>
-		 <p>If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act (UHTA), you may request a ruling or interpretation about how the tax applies to your specific situation.</p>
-		 
+		 <p>In most situations, affected owners must also pay the tax for each residential property they own, unless they qualify for an exemption. If an affected owner qualifies for an exemption, they must indicate the applicable exemption within their return. They will then be exempt from paying the tax. <p> 
+		 	 <p>If you are not an affected owner, the CRA refers to you as an <strong>excluded owner</strong>. Only excluded owners do not have to file a return or pay the tax. </p>
+		
 		 
 		 
             <h2>Determine if you are an affected owner or an excluded owner</h2>
@@ -1146,7 +1144,8 @@ margin-left: 38px;
         </div>
 	  </div>   
       
-
+ <p><<strong>If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act (UHTA), you may request a ruling or interpretation about how the tax applies to your specific situation.</strong></p>
+		
 
     <!-- <nav class="mrgn-bttm-lg mrgn-tp-lg">
             <h3 class="wb-inv">Document navigation</h3>
