--- a/fhsa/v2/deductions.html
+++ b/fhsa/v2/deductions.html
@@ -402,8 +402,7 @@
     </ul>
 	 <h3>Unused FHSA contributions</h3>
 <p>Generally, the amounts that you contributed to your FHSAs but could not or decided not to claim as an FHSA deduction on your income tax and benefit return can be carried forward, even beyond the closure of your FHSAs. </p>
-	<p>If you have an excess FHSA amount, the deductibility of your unused FHSA contributions that can be carried forward may be impacted. For more information, <span class="nowrap">g</span>o to <a href="#h_5">Deductions when you have an excess FHSA amount</a>.</p>
-<p>After you have opened your first FHSA, the total of your unused FHSA contributions available to be deducted in a future year will be provided to you on your notice of assessment or reassessment. <span class="label label-info">More information about these notices will be available at a later date.</span></p>
+	<p>If you have an excess FHSA amount, the deductibility of your unused FHSA contributions that can be carried forward may be impacted. </p>
 
     
         <h2 id="h-5">Deductions when you have an excess FHSA amount</h2>
