--- a/fhsa/death.html
+++ b/fhsa/death.html
@@ -99,7 +99,7 @@
     
 
     
-        <h2><a id="h_1"></a>Deceased holderr</h2>
+        <h2><a id="h_1"></a>Deceased holder</h2>
 
     <p>content</p>
 
