--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -822,8 +822,7 @@ margin-left: 38px;
 			 <summary>Who is considered an owner</summary>
 			 <p>You are an owner of a residential property if you are any of the following:</p>
 				<ul>
-					<li>Identified as an owner of the property in the land registration system where the property is located</li>
-					<li>Considered an owner of the property based on such a land registration system</li>
+					<li>Identified and considered as an owner of the property in the land registration system where the property is located</li>
 					<li>A life tenant under a life estate in the property</li>
 					<li>A life lease holder of the property</li>
 					<li>A lessee that has continuous possession of the land on which the property is situated under a long-term lease</li>
@@ -832,9 +831,8 @@ margin-left: 38px;
 				<p>For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681153">Owner of residential property</a></p>
 		 </details>	
 		 <br>
-				<p>If you are an <strong>affected owner</strong>, you must file an annual Underused Housing Tax return for each of your residential properties. </p>
-		 
-		 <p>In most situations, affected owners must also pay the tax for each residential property they own, unless they qualify for an exemption. If an affected owner qualifies for an exemption, they must indicate the applicable exemption within their return. They will then be exempt from paying the tax. <p> 
+				
+		 <p>In most situations, <strong></strong>affected owners</strong> must also pay the tax for each residential property they own, unless they qualify for an exemption. If an affected owner qualifies for an exemption, they must indicate the applicable exemption within their return. They will then be exempt from paying the tax. <p> 
 		 	 <p>If you are not an affected owner, the CRA refers to you as an <strong>excluded owner</strong>. Only excluded owners do not have to file a return or pay the tax. </p>
 		
 		 
