--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -1142,7 +1142,7 @@ margin-left: 38px;
         </div>
 	  </div>   
       
- <p><<strong>If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act (UHTA), you may request a ruling or interpretation about how the tax applies to your specific situation.</strong></p>
+ <p><strong>[If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act (UHTA), you may request a ruling or interpretation about how the tax applies to your specific situation.]</strong></p>
 		
 
     <!-- <nav class="mrgn-bttm-lg mrgn-tp-lg">
