--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -833,7 +833,7 @@ margin-left: 38px;
 		 <br>
 				
 		 <p>In most situations, <strong></strong>affected owners</strong> must also pay the tax for each residential property they own, unless they qualify for an exemption. If an affected owner qualifies for an exemption, they must indicate the applicable exemption within their return(s). They will then be exempt from paying the tax. <p> 
-		 	 <p>If you are not an affected owner, the CRA refers to you as an <strong>excluded owner</strong>. Only excluded owners do not have to file a return or pay the tax. </p>
+		 	 <p>If you are not an affected owner, we refer to you as an <strong>excluded owner</strong>. Only excluded owners do not have to file a return or pay the tax. </p>
 		
 		 
 		 
