--- a/fhsa/v3/index.html
+++ b/fhsa/v3/index.html
@@ -67,14 +67,14 @@
       </div>
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="participating.html">Participating in your FHSAs</a></h3>
+          <h3><a href="participate.html">Participating in your FHSAs</a></h3>
           <p>How much you can contribute or transfer to your FHSAs, and calculating your FHSA participation room</p>
         </section>
       </div>
      
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="withdrawals.html">Withdrawals and transfers out of your FHSAs</a></h3>
+          <h3><a href="out.html">Withdrawals and transfers out of your FHSAs</a></h3>
           <p>Withdrawals and transfers from your FHSAs to buy a qualifying home or for other reasons, and possible tax consequences</p>
         </section>
       </div>
@@ -93,7 +93,7 @@
      
       <div class="col-lg-4 col-md-6">
         <section>
-          <h3><a href="death.html">Closing your FHSAs</a></h3>
+          <h3><a href="close.html">Closing your FHSAs</a></h3>
           <p>Details about your maximum participation period and when to close your FHSA</p>
         </section>	    
 	    </div>
