--- a/subway/uht/whomust.html
+++ b/subway/uht/whomust.html
@@ -832,8 +832,11 @@ margin-left: 38px;
 		 </details>	
 		 <br>
 				
-		 <p>In most situations, <strong>affected owners</strong> must also pay the tax for each residential property they own, unless they qualify for an exemption. If an affected owner qualifies for an exemption, they must indicate the applicable exemption within their return(s). They will then be exempt from paying the tax. <p> 
-		 	 <p>If you are not an affected owner, we refer to you as an <strong>excluded owner</strong>. Only excluded owners do not have to file a return or pay the tax. </p>
+		 <p>In most situations, <strong>affected owners</strong> must also pay the tax for each residential property they own, unless they qualify for an exemption. If an affected owner qualifies for an exemption, they must indicate the applicable exemption within their return(s), and will not have to pay the tax.<p> 
+		 <p>If you share ownership with one or more co-owners who are also affected owners, <strong>each</strong> of you must file a separate return for the property, even if your respective ownership qualifies for an exemption.</p>
+			
+	 
+		 <p>If you are not an affected owner, we refer to you as an <strong>excluded owner</strong>. Only excluded owners do not have to file a return or pay the tax. </p>
 		
 		 
 		 
