move multiple owners

--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -797,10 +797,8 @@ margin-left: 38px;
 		
 	  
 		  <p>If you are an <strong>affected owner</strong> of a residential property in Canada on December 31, <strong>you must file</strong> an Underused Housing Tax return for the calendar year.</p>
-		 <p>Even if your ownership of the property qualifies for an exemption and you do not owe any tax, you still must file a return.</p> 
-		<p>If you are an affected owner of a residential property on December 31 who shares ownership with one or more co-owners who are also affected owners, each of you must file a separate return for the property. You must each file separate returns even if your respective ownership qualifies for an exemption.</p>
-			
-
+		 <p>You still must file a return even if your ownership of the property qualifies for an exemption and you do not owe any tax.</p>
+		
 
 	        <h2>Filling out the return</h2>
 <p>Follow the steps below to help you fill out the sections of the Underused Housing Tax return (UHT-2900). </p>
