--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -801,17 +801,17 @@ margin-left: 38px;
 		
 
 	        <h2>Filling out the return</h2>
-<p>Follow the steps below to help you fill out the sections of the Underused Housing Tax return (UHT-2900). </p>
+<p>Follow the steps below to help you fill out the sections of the return. </p>
 <h3>What return form to use</h3>
 <ul class="fa-ul">
-<li><span class="far fa-file-alt fa-lg fa-li"></span><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/uht-2900.html" target="_blank">UHT-2900 Underused Housing Tax Return and Election Form</a></li>
+<li><span class="far fa-file-alt fa-lg fa-li"></span><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/uht-2900.html" target="_blank">UHT-2900, Underused Housing Tax Return and Election Form</a></li>
 </ul>
 
 
 		 
 <ol class="lst-stps stps-strpd">
 <li><h3>Part 1 - Information about the owner </h3>
-<p>You must have a valid CRA tax identifier number to file your Underused Housing Tax return.</p>
+<p>You must have a valid CRA tax identifier number to file your return.</p>
 
 	<details>
   <summary>Tax identifier numbers</summary>
@@ -863,7 +863,7 @@ margin-left: 38px;
 	
 </li>
 <li><h3>Part 2 - Information about your residential property in Canada</h3>
-	<p>You must determine your ownership percentage, as well as the value of the residential property</p>
+	<p>You must determine your ownership percentage, as well as the value of the residential property.</p>
 	<details>
 <summary>Determine your ownership percentage</summary>
 	<p>If you are the only owner of the residential property, your ownership percentage is 100%</p>
