--- a/fhsa/v2/open.html
+++ b/fhsa/v2/open.html
@@ -58,8 +58,8 @@
          </script>
          <main role="main" property="mainContentOfPage" class="container">
           
-            <h1 property="name" id="wb-cont" class="gc-thickline">Opening your FHSAs</h1>
-            <p>Find out who is eligible to open a First Home Savings Account (FHSA) and how to open an account.</p>
+            <h1 property="name" id="wb-cont" class="gc-thickline">Opening and closing your FHSAs</h1>
+            <p>Find out who is eligible to open a First Home Savings Account (FHSA), how to open an account, and when to close your accounts.</p>
 		 <div class="alert alert-success">
 	<p>You can open an FHSA starting April 1, 2023.</p>
 </div>
